samples/_failures_safe/1761413649_fca49d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca4c4d62.c: In function ‘main’:
./samples/SAFE/__tmp_ca4c4d62.c:148:49: error: expected ‘)’ at end of input
  148 |                     for (int k = 0; k < cols1; k
      |                         ~                       ^
      |                                                 )
./samples/SAFE/__tmp_ca4c4d62.c:148:21: error: expected declaration or statement at end of input
  148 |                     for (int k = 0; k < cols1; k
      |                     ^~~
./samples/SAFE/__tmp_ca4c4d62.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca4c4d62.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca4c4d62.c:148:21: error: expected declaration or statement at end of input
